# gtf2utr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: run_example.py  sample_processed.gtf
examples/data/: sample.fa  sample.gtf
gtf2utr/: __init__.py  __main__.py  cli.py  gtf_processor.py  utr_extractor.py
gtf2utr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_gtf_processor.py  test_utr_extractor.py
