[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gtf2utr"
version = "1.0.0"
description = "A Python package for extracting UTR sequences from GTF and FASTA files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gtf2utr team", email = "contact@gtf2utr.org"}
]
maintainers = [
    {name = "gtf2utr team", email = "contact@gtf2utr.org"}
]
keywords = ["bioinformatics", "genomics", "UTR", "GTF", "FASTA", "sequence-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/yourusername/gtf2utr"
Documentation = "https://github.com/yourusername/gtf2utr/blob/main/README.md"
Repository = "https://github.com/yourusername/gtf2utr"
"Bug Tracker" = "https://github.com/yourusername/gtf2utr/issues"

[project.scripts]
gtf2utr-process = "gtf2utr.cli:process_gtf"
gtf2utr-extract = "gtf2utr.cli:extract_utrs"
gtf2utr = "gtf2utr.cli:main"

[tool.setuptools]
packages = ["gtf2utr"]

[tool.setuptools.package-data]
gtf2utr = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true